NL-63 Correct the testing conventions CLAUDE.md states
Two claims in the Development Workflow section were wrong, and both are the
kind that misdirect on first contact -- they describe how to write a test, so
they are read before anything else in the repo is.

The package was given as org.junit.gen6. Nothing in the repo imports it: all
37 test classes use org.junit.jupiter.api, which is what the version catalog
declares (org.junit.jupiter:junit-jupiter at 6.0.3). JUnit 6 kept the Jupiter
package name, so the version was right and only the coordinate was invented.

Test tasks were said to require --enable-preview. They do not, and the file
already said so 40 lines above -- "No --enable-preview -- the library targets
only stable JDK features, so consumers don't need special JVM flags", which
b84d232 made true. The actual jvmArgs entry is --enable-native-access=ALL-UNNAMED,
so the flag is now named rather than left to be discovered in build.gradle.kts.
A document that contradicts itself about a build flag costs more than one that
omits it.